--- a/src/Portfolio.BlazorApp/Portfolio.BlazorApp.csproj
+++ b/src/Portfolio.BlazorApp/Portfolio.BlazorApp.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Blazorise" Version="0.9.2.4" />
+    <PackageReference Include="Blazorise.Bootstrap" Version="0.9.2.4" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.2.4" />
+  </ItemGroup>
 </Project>
